--- a/fristplaybook.yml
+++ b/fristplaybook.yml
@@ -6,6 +6,11 @@
     apt: 
       name: apache2
       state: present
+
+  - name: start my webserver on ansible nodes
+    service:
+      name: apache2
+      state: started
   
   - name: i want to install web ser server on ansibel nodes 
     apt:
