--- a/fristplaybook.yml
+++ b/fristplaybook.yml
@@ -6,16 +6,20 @@
     apt: 
       name: apache2
       state: present
+    when: ansible_os_family== "Debian"
 
   - name: start my webserver on ansible nodes
     service:
       name: apache2
       state: started
+    
+
   
   - name: i want to install web ser server on ansibel nodes 
     apt:
       name: tree
       state: present
+    when: ansible_os_family== "Debian"
 
   - name: i want to install webserver on ansible nodes 
     apt: 
