--- a/fristplaybook.yml
+++ b/fristplaybook.yml
@@ -25,3 +25,8 @@
     apt: 
       name: nginx
       state: present
+  
+  - name: i want to start redhat server on ansible nodes
+    yum:
+      name: httpd
+      state: present
