--- a/fristplaybook.yml
+++ b/fristplaybook.yml
@@ -12,6 +12,7 @@
     service:
       name: apache2
       state: started
+    when: ansible_os_family== "Debian"
 
   - name: i want to install redhat server on ansible nodes
     yum:
