--- a/fristplaybook.yml
+++ b/fristplaybook.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: mywebservers
+- hosts: 172.31.7.187
   become: yes
   tasks:
   - name: i want to install web server on ansible nodes 
