--- a/webserver.yml
+++ b/webserver.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: all
+- hosts: mywebservers
   become: yes
   tasks:
   - name: i want to install my webserver on ansible nodes
@@ -11,5 +11,3 @@
     service:
       name: apache2
       state: started
-
-      
